# rfl_scrape2

./: pyproject.toml  seeds.yml
.github/workflows/: ca_capture.yml  scrape.yml  us_debug.yml
scripts/: ca_capture_index_network.py  us_capture_zip_network.py  us_summarize_network.py
src/relay_scraper/: cli.py  us_api.py
src/relay_scraper/core/: extract.py  fetch.py  models.py  normalize.py  output.py  utils.py
src/relay_scraper/countries/: au.py  ca.py  uk.py  us.py
