[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-scraper"
version = "0.1.0"
description = "Relay For Life global event scraper (name, date, organizer emails)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "dateparser>=1.2.0",
  "httpx>=0.27.0",
  "lxml>=5.2.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "playwright>=1.42.0",
]

[project.scripts]
relay-scrape = "relay_scraper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
